--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="second-section-list">
             <li class="list-sec-section">
+              <svg class="container-icon">
+                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+              </svg>
               <h3 class="title-h-three">Strategy</h3>
               <p class="paragraph">
                 Our goal is to identify the business problem to walk away with
@@ -71,6 +74,9 @@
             </li>
 
             <li class="list-sec-section">
+              <svg class="container-icon">
+                <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+              </svg>
               <h3 class="title-h-three">Punctuality</h3>
               <p class="paragraph">
                 Bring the key message to the brand's audience for the best price
@@ -79,6 +85,9 @@
             </li>
 
             <li class="list-sec-section">
+              <svg class="container-icon">
+                <use href="./images/symbol-defs.svg#icon-Vector"></use>
+              </svg>
               <h3 class="title-h-three">Diligence</h3>
               <p class="paragraph">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +96,9 @@
             </li>
 
             <li class="list-sec-section">
+              <svg class="container-icon" width="64" height="64">
+                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+              </svg>
               <h3 class="title-h-three">Technologies</h3>
               <p class="paragraph">
                 Design practice focused on digital experiences. We bring forth a
