--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <ul class="second-section-list">
             <li class="list-sec-section">
               <svg class="container-icon">
-                <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                <use href="./images/icons.svg#icon-antenna-1"></use>
               </svg>
               <h3 class="title-h-three">Strategy</h3>
               <p class="paragraph">
@@ -75,7 +75,7 @@
 
             <li class="list-sec-section">
               <svg class="container-icon">
-                <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
               <h3 class="title-h-three">Punctuality</h3>
               <p class="paragraph">
@@ -86,7 +86,7 @@
 
             <li class="list-sec-section">
               <svg class="container-icon">
-                <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                <use href="./images/icons.svg#icon-Vector"></use>
               </svg>
               <h3 class="title-h-three">Diligence</h3>
               <p class="paragraph">
@@ -97,7 +97,7 @@
 
             <li class="list-sec-section">
               <svg class="container-icon" width="64" height="64">
-                <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
               <h3 class="title-h-three">Technologies</h3>
               <p class="paragraph">
@@ -125,7 +125,37 @@
               <div class="name-position">
                 <h3 class="name-title">Mark Guerrero</h3>
                 <p class="paragraph-position">Product Designer</p>
-              </div>
+                 </div>
+                <ul class="ul-social">
+                 <li class="li-social">
+                  <a href="">
+                    <svg class="icon-list" width="16" height="16">
+                      <use href="./images/icons.svg#icon-Ellipse1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <svg>
+                      <use href="./images/icons.svg#icon-Ellipse1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <svg>
+                      <use href="./images/icons.svg#icon-Ellipse1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <svg>
+                      <use href="./images/icons.svg#icon-Ellipse1"></use>
+                    </svg>
+                  </a>
+                </li>
+                </ul>
             </li>
 
             <li class="list-sec-three">
