--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="second-section-list">
             <li class="list-sec-section">
-              <svg class="container-icon">
-                <use href="./images/icons.svg#icon-antenna-1"></use>
-              </svg>
+              <div class="container-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="title-h-three">Strategy</h3>
               <p class="paragraph">
                 Our goal is to identify the business problem to walk away with
@@ -74,9 +76,11 @@
             </li>
 
             <li class="list-sec-section">
-              <svg class="container-icon">
-                <use href="./images/icons.svg#icon-clock-1"></use>
-              </svg>
+              <div class="container-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="title-h-three">Punctuality</h3>
               <p class="paragraph">
                 Bring the key message to the brand's audience for the best price
@@ -85,9 +89,11 @@
             </li>
 
             <li class="list-sec-section">
-              <svg class="container-icon">
-                <use href="./images/icons.svg#icon-Vector"></use>
-              </svg>
+              <div class="container-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </div>
               <h3 class="title-h-three">Diligence</h3>
               <p class="paragraph">
                 Research and confirm brands that present the strongest digital
@@ -96,9 +102,11 @@
             </li>
 
             <li class="list-sec-section">
-              <svg class="container-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut-1"></use>
-              </svg>
+              <div class="container-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="title-h-three">Technologies</h3>
               <p class="paragraph">
                 Design practice focused on digital experiences. We bring forth a
@@ -125,37 +133,38 @@
               <div class="name-position">
                 <h3 class="name-title">Mark Guerrero</h3>
                 <p class="paragraph-position">Product Designer</p>
-                 </div>
+
                 <ul class="ul-social">
-                 <li class="li-social">
-                  <a href="">
-                    <svg class="icon-list" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <svg>
-                      <use href="./images/icons.svg#icon-Ellipse1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <svg>
-                      <use href="./images/icons.svg#icon-Ellipse1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <svg>
-                      <use href="./images/icons.svg#icon-Ellipse1"></use>
-                    </svg>
-                  </a>
-                </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <svg>
+                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <svg>
+                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <svg>
+                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
+              </div>
             </li>
 
             <li class="list-sec-three">
