--- a/index.html
+++ b/index.html
@@ -138,28 +138,28 @@
                   <li class="li-social">
                     <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Ellipse"></use>
+                        <use href="./images/icons.svg#icon-Instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a href="">
-                      <svg>
-                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Linkedin"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a href="">
-                      <svg>
-                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a href="">
-                      <svg>
-                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Twitter"></use>
                       </svg>
                     </a>
                   </li>
