--- a/index.html
+++ b/index.html
@@ -136,28 +136,28 @@
 
                 <ul class="ul-social">
                   <li class="li-social">
-                    <a class="link-social" href="#">
+                    <a class="link-social" href="">
                       <svg class="icon-list" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="link-social" href="#">
+                    <a class="link-social" href="">
                       <svg class="icon-list" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Linkedin"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="link-social" href="#">
+                    <a class="link-social" href="">
                       <svg class="icon-list" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Facebook"></use>
+                        <use href="/images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="link-social" href="#">
+                    <a class="link-social" href="">
                       <svg class="icon-list" width="16" height="16">
                         <use href="./images/icons.svg#icon-Twitter"></use>
                       </svg>
@@ -299,6 +299,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="social-media-container">
+        <p class="social-media">Social media</p>
+        <ul class="social-list">
+          <li class="social-item">
+            <a href="#" class="link-social">
+              <svg class="icon-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="link-social">
+              <svg class="icon-footer" width="24" height="24">
+                <use></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="link-social">
+              <svg class="icon-footer" width="24" height="24">
+                <use></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="link-social">
+              <svg class="icon-footer" width="24" height="24">
+                <use></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
