--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <li class="list-sec-section">
               <div class="container-icon">
                 <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-Vector"></use>
+                  <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </div>
               <h3 class="title-h-three">Diligence</h3>
@@ -142,24 +142,24 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="li-social">
                     <a class="link-social" href="">
                       <svg class="icon-list" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="li-social">
                     <a class="link-social" href="">
                       <svg class="icon-list" width="16" height="16">
-                        <use href="/images/icons.svg#icon-linkedin"></use>
+                        <use href="/images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="li-social">
                     <a class="link-social" href="">
                       <svg class="icon-list" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -177,6 +177,36 @@
               <div class="name-position">
                 <h3 class="name-title">Tom Ford</h3>
                 <p class="paragraph-position">Frontend Developer</p>
+              <ul class="ul-social">
+                  <li class="li-social">
+                    <a class="link-social" href="">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -190,6 +220,36 @@
               <div class="name-position">
                 <h3 class="name-title">Camila Garcia</h3>
                 <p class="paragraph-position">Marketing</p>
+              <ul class="ul-social">
+                  <li class="li-social">
+                    <a class="link-social" href="">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -203,6 +263,36 @@
               <div class="name-position">
                 <h3 class="name-title">Daniel Wilson</h3>
                 <p class="paragraph-position">UI Designer</p>
+              <ul class="ul-social">
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
