--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <div class="name-position">
                 <h3 class="name-title">Tom Ford</h3>
                 <p class="paragraph-position">Frontend Developer</p>
-              <ul class="ul-social">
+                <ul class="ul-social">
                   <li class="li-social">
                     <a class="link-social" href="">
                       <svg class="icon-list" width="16" height="16">
@@ -220,7 +220,7 @@
               <div class="name-position">
                 <h3 class="name-title">Camila Garcia</h3>
                 <p class="paragraph-position">Marketing</p>
-              <ul class="ul-social">
+                <ul class="ul-social">
                   <li class="li-social">
                     <a class="link-social" href="">
                       <svg class="icon-list" width="16" height="16">
@@ -263,7 +263,7 @@
               <div class="name-position">
                 <h3 class="name-title">Daniel Wilson</h3>
                 <p class="paragraph-position">UI Designer</p>
-              <ul class="ul-social">
+                <ul class="ul-social">
                   <li class="li-social">
                     <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
@@ -304,12 +304,19 @@
           <h2 class="title-sec-four">Our Portfolio</h2>
           <ul class="fourth-section-list">
             <li class="list-sec-four">
-              <img
-                src="./images/img-5.jpg"
-                alt="banking-app"
-                width="360"
-                height="300"
-              />
+              <div class="info-app-container">
+                <p class="p-info-hidden">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage Apps
+                </p>
+                <img
+                  src="./images/img-5.jpg"
+                  alt="banking-app"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app-container">
                 <h3 class="title-h-four">Banking App</h3>
                 <p class="paragraph-sec-four">App</p>
