--- a/index.html
+++ b/index.html
@@ -136,30 +136,30 @@
 
                 <ul class="ul-social">
                   <li class="li-social">
-                    <a class="link-social" href="">
+                    <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="li-social">
-                    <a class="link-social" href="">
-                      <svg class="icon-list" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="li-social">
-                    <a class="link-social" href="">
-                      <svg class="icon-list" width="16" height="16">
-                        <use href="/images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="li-social">
-                    <a class="link-social" href="">
+                    <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -179,30 +179,30 @@
                 <p class="paragraph-position">Frontend Developer</p>
                 <ul class="ul-social">
                   <li class="li-social">
-                    <a class="link-social" href="">
+                    <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="li-social">
-                    <a class="link-social" href="">
-                      <svg class="icon-list" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="li-social">
-                    <a class="link-social" href="">
-                      <svg class="icon-list" width="16" height="16">
-                        <use href="/images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="li-social">
-                    <a class="link-social" href="">
+                    <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -222,30 +222,30 @@
                 <p class="paragraph-position">Marketing</p>
                 <ul class="ul-social">
                   <li class="li-social">
-                    <a class="link-social" href="">
+                    <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="li-social">
-                    <a class="link-social" href="">
-                      <svg class="icon-list" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="li-social">
-                    <a class="link-social" href="">
-                      <svg class="icon-list" width="16" height="16">
-                        <use href="/images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="li-social">
-                    <a class="link-social" href="">
+                    <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -274,21 +274,21 @@
                   <li class="li-social">
                     <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="li-social">
-                    <a class="link-social" href="#">
-                      <svg class="icon-list" width="16" height="16">
-                        <use href="/images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="li-social">
-                    <a class="link-social" href="#">
-                      <svg class="icon-list" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social">
+                    <a class="link-social" href="#">
+                      <svg class="icon-list" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -305,17 +305,17 @@
           <ul class="fourth-section-list">
             <li class="list-sec-four">
               <div class="info-app-container">
-                <p class="p-info-hidden">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage Apps
-                </p>
                 <img
                   src="./images/img-5.jpg"
                   alt="banking-app"
                   width="360"
                   height="300"
                 />
+                <p class="p-info-hidden">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="app-container">
                 <h3 class="title-h-four">Banking App</h3>
@@ -323,60 +323,95 @@
               </div>
             </li>
             <li class="list-sec-four">
-              <img
-                src="./images/img-4.jpg"
-                alt="cashless-payment"
-                width="360"
-                height="300"
-              />
+              <div class="info-app-container">
+                <p class="p-info-hidden">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/img-4.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app-container">
                 <h3 class="title-h-four">Cashless Payment</h3>
                 <p class="paragraph-sec-four">Marketing</p>
               </div>
             </li>
             <li class="list-sec-four">
-              <img
-                src="./images/img-3.jpg"
-                alt="mediation-app"
-                width="360"
-                height="300"
-              />
+              <div class="info-app-container">
+                <p class="p-info-hidden">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/img-3.jpg"
+                  alt="mediation-app"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app-container">
                 <h3 class="title-h-four">Meditation App</h3>
                 <p class="paragraph-sec-four">App</p>
               </div>
             </li>
             <li class="list-sec-four">
-              <img
-                src="./images/img-2.jpg"
-                alt="driver-in-the-car"
-                width="360"
-                height="300"
-              />
+              <div class="info-app-container">
+                <p class="p-info-hidden">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/img-2.jpg"
+                  alt="driver-in-the-car"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app-container">
                 <h3 class="title-h-four">Taxi Service</h3>
                 <p class="paragraph-sec-four">Marketing</p>
               </div>
             </li>
             <li class="list-sec-four">
-              <img
-                src="./images/img-1.jpg"
-                alt="moon-on-the-phone-display"
-                width="360"
-                height="300"
-              />
+              <div class="info-app-container">
+                <p class="p-info-hidden">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/img-1.jpg"
+                  alt="moon-on-the-phone-display"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app-container">
                 <h3 class="title-h-four">Screen Illustrations</h3>
                 <p class="paragraph-sec-four">Design</p>
               </div>
             </li>
             <li class="list-sec-four">
-              <img
-                src="./images/img.jpg"
-                alt="woman-speaks-videocall"
-                width="360"
-                height="300"
-              />
+              <div class="info-app-container">
+                <p class="p-info-hidden">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/img.jpg"
+                  alt="woman-speaks-videocall"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app-container">
                 <h3 class="title-h-four">Online Courses</h3>
                 <p class="paragraph-sec-four">Marketing</p>
@@ -388,47 +423,49 @@
     </main>
 
     <footer id="contacts" class="footer">
-      <div class="container">
-        <a href="./index.html" class="main-link-footer"
-          >Web<span class="link-footer">Studio</span></a
-        >
-        <p class="p-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="social-media-container">
-        <p class="social-media">Social media</p>
-        <ul class="social-list">
-          <li class="social-item">
-            <a href="#" class="link-social">
-              <svg class="icon-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="#" class="link-social">
-              <svg class="icon-footer" width="24" height="24">
-                <use></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="#" class="link-social">
-              <svg class="icon-footer" width="24" height="24">
-                <use></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="#" class="link-social">
-              <svg class="icon-footer" width="24" height="24">
-                <use></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="container footer-container">
+        <div class="container-logo-p">
+          <a href="./index.html" class="main-link-footer"
+            >Web<span class="link-footer">Studio</span></a
+          >
+          <p class="p-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-container">
+          <p class="social-media">Social media</p>
+          <ul class="social-list">
+            <li class="social-item">
+              <a href="#" class="link-social-footer">
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="link-social-footer">
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="link-social-footer">
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="link-social-footer">
+                <svg class="icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
