--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   <li class="li-social">
                     <a class="link-social" href="#">
                       <svg class="icon-list" width="16" height="16">
-                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
